--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple frontend project using React.js and Petfinder API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "production": "webpack -p"
   },
   "repository": {
     "type": "git",
